@@ -65,7 +65,7 @@ jobs:
 
         steps:
             -   name: "Checkout"
-                uses: "actions/checkout@v2"
+                uses: "actions/checkout@v4"
                 with:
                     fetch-depth: 2
 
@@ -81,7 +81,7 @@ jobs:
                 if: "${{ matrix.stability == 'stable' }}"
 
             -   name: "Install dependencies with Composer"
-                uses: "ramsey/composer-install@v1"
+                uses: "ramsey/composer-install@v2"
                 with:
                     dependency-versions: "${{ matrix.dependencies }}"
                     composer-options: "--prefer-dist"
@@ -103,7 +103,7 @@ jobs:
 
         steps:
             -   name: "Checkout"
-                uses: "actions/checkout@v2"
+                uses: "actions/checkout@v4"
                 with:
                     fetch-depth: 2
 
